<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.AuthenticationActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/make_your_story"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/img_logo"
        app:layout_constraintEnd_toEndOf="@id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/ph_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo">

        <com.bangkit.intermediate.storyappfinal.core.component.CustomEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/ph_email"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_logo"
        app:layout_constraintTop_toBottomOf="@+id/ti_name">

        <com.bangkit.intermediate.storyappfinal.core.component.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/ph_password"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_logo"
        app:layout_constraintTop_toBottomOf="@+id/ti_email">

        <com.bangkit.intermediate.storyappfinal.core.component.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/tv_logo"
        app:layout_constraintEnd_toEndOf="@id/tv_logo"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        android:text="@string/label_button" />

    <ProgressBar
        android:id="@+id/pb_auth"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintBottom_toTopOf="@id/btn_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/label_account_ask"
            app:layout_constraintStart_toStartOf="@+id/tv_logo"
            app:layout_constraintEnd_toEndOf="@+id/tv_logo"
            app:layout_constraintTop_toBottomOf="@+id/btn_auth"/>

        <com.bangkit.intermediate.storyappfinal.core.component.CustomButton
            android:id="@+id/btn_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/label_button"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_logo"
            app:layout_constraintEnd_toEndOf="@+id/tv_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_acc"/>

</androidx.constraintlayout.widget.ConstraintLayout>